<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/expand_button"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?selectableItemBackground"
        android:padding="16dp">

        <ImageView
            android:id="@+id/nv_expand_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/parent_textView"
            />


        <TextView
            android:id="@+id/parent_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"

            />


    </RelativeLayout>

    <net.cachapa.expandablelayout.ExpandableLayout
        android:id="@+id/expandable_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        app:el_duration="300"
        app:el_expanded="false">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_fasl1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/season_1_title"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/tv_fasl2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/season_2_title"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/tv_fasl3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/season_3_title"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/tv_fasl4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/season_4_title"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/tv_fasl5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/season_5_title"
                android:textColor="#fff" />


        </LinearLayout>


    </net.cachapa.expandablelayout.ExpandableLayout>

</LinearLayout>
